# AI-visual-voice-assistant

./: .gitignore  DESIGN.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: messages.py  websocket.py
backend/app/core/: config.py
backend/app/services/: gemini_service.py  input_scheduler.py  session_runtime.py  usage.py
backend/tests/: conftest.py  test_config.py  test_gemini_service.py  test_health.py  test_input_scheduler.py  test_messages.py  test_session_runtime.py  test_usage.py  test_websocket.py
docs/: DESIGN.md  frontend-integration-contract.md
docs/superpowers/plans/: 2026-06-12-ai-visual-conversation-frontend.md  2026-06-12-realtime-quality-cost-optimization.md  2026-06-13-echosight-entry-motion.md
docs/superpowers/specs/: 2026-06-12-ai-visual-conversation-frontend-design.md  2026-06-13-echosight-entry-motion-design.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/public/: audio-capture.worklet.js
frontend/src/: main.tsx
frontend/src/app/: App.test.tsx  App.tsx  session-reducer.test.ts  session-reducer.ts
frontend/src/components/: ControlDock.tsx  DeviceCheckScreen.tsx  EntryScreen.test.tsx  EntryScreen.tsx  LiveSessionScreen.tsx  SessionSummary.test.tsx  SessionSummary.tsx  StatusBadge.tsx  TranscriptDrawer.tsx
frontend/src/hooks/: useSession.ts
frontend/src/media/: audio-capture.ts  audio-codec.test.ts  audio-codec.ts  media-controller.ts  pcm-audio-player.ts  video-frame-sampler.test.ts  video-frame-sampler.ts
frontend/src/protocol/: messages.test.ts  (+3 more)
(+4 files in other folders)
