[project]
name = "sightline-backend"
version = "0.1.0"
description = "FastAPI backend for the SightLine Gemini Live assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "pydantic-settings==2.4.0",
    "python-dotenv==1.0.0",
    "uvicorn[standard]==0.30.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
